# GameEngine

./: .gitignore  CMakeLists.txt  CMakePresents.json  CMakePresets.json
Editor/: CMakeLists.txt
Editor/src/: EditorLayer.cpp  EditorLayer.h  Mytest.cpp  RealEngineApp.cpp
Editor/src/Resources/Shaders/: Quad.frag
Engine/: CMakeLists.txt
Engine/include/: Application.h  ApplicationEvent.h  Core.h  EntryPoint.h  Event.h  KeyEvent.h  Layer.h  LayerStack.h  Log.h  Logger.h  MouseEvent.h  TimeStep.h  Window.h  pch.h
Engine/src/: RealEngine.h
Engine/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Logger.cpp
Engine/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Core/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
Engine/src/Core/Logging/: Log.cpp  Log.h  Logger.cpp  Logger.h
Engine/src/Core/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Resources/Shaders/: Default.frag  Default.vert  Quad.vert
Game/: CMakeLists.txt
Game/src/: FirstGame.cpp
